--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -2,6 +2,8 @@
 @use '../../styles/vars/colors';
 @use '../../styles/vars/shadows';
 
+@use '../../styles/mixins/focus-outline';
+
 .list {
   box-sizing: border-box;
   margin: 0;
@@ -27,6 +29,10 @@
   &:last-child > .label {
     border-start-end-radius: sizes.$border-radius - 1px;
     border-end-end-radius: sizes.$border-radius - 1px;
+  }
+
+  &:has(> input:checked) {
+    z-index: 1;
   }
 }
 
@@ -83,4 +89,8 @@
   &:active {
     background-color: colors.$primary-active;
   }
+}
+
+.input:focus-visible + .label {
+  @include focus-outline.default;
 }
