--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -5,42 +5,43 @@
 .layout {
   padding: sizes.$gap;
 
-  max-width: sizes.$screen-md - sizes.$gap;
   box-sizing: border-box;
+  min-height: 100vh;
+  max-width: sizes.$screen-md - sizes.$gap;
   margin-left: auto;
   margin-right: auto;
 
   gap: sizes.$gap;
 
   display: grid;
-  grid-template-areas:
-    'logo      logo '
-    'transfers sort '
-    'transfers tickets'
-    'transfers tickets';
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 150px 50px 1fr 50px;
 
-  @media screen and (max-width: sizes.$screen-md) {
-    grid-template-columns: auto;
-    grid-template-rows: auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+
+  grid-template-areas:
+    'logo'
+    'transfers'
+    'sort'
+    'tickets';
+
+  @media screen and (min-width: sizes.$screen-sm) {
+    grid-template-rows: 150px 270px 1fr;
 
     grid-template-areas:
       'logo      logo'
       'transfers sort'
       'tickets   tickets';
-
-    & > .sort {
-      writing-mode: vertical-lr;
-    }
   }
 
-  @media screen and (max-width: sizes.$screen-sm) {
+  @media screen and (min-width: sizes.$screen-md) {
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 150px 50px 1fr 50px;
+
     grid-template-areas:
-      'logo'
-      'transfers'
-      'sort'
-      'tickets';
+      'logo      logo '
+      'transfers sort '
+      'transfers tickets'
+      'transfers tickets';
   }
 }
 
@@ -53,11 +54,19 @@
 .transfers {
   grid-area: transfers;
 
-  margin-bottom: auto;
+  @media screen and (min-width: sizes.$screen-md) {
+    margin-bottom: auto;
+  }
 }
 
 .sort {
   grid-area: sort;
+
+  writing-mode: vertical-lr;
+
+  @media screen and (min-width: sizes.$screen-md) {
+    writing-mode: unset;
+  }
 }
 
 .tickets {
